[package]
name = "can"
version = "0.3.0"
edition = "2021"
authors = ["Josh Voigts"]
description = "Cross-platform command line tool for moving files to the trash"
repository = "https://github.com/joshvoigts/can"
license = "MIT"
keywords = ["can", "recycling", "trash"]
categories = ["command-line-utilities", "filesystem"]
publish = ["crates.io"]

[dependencies]
chrono = "0.4.42"
filetime = "0.2"
libc = "0.2"
optz = "0.10.0"
urlencoding = "2.1.3"
xdg = "3.0.0"
